[package]
name = "my-learn-wgpu"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
winit = { version = "0.29", features = ["rwh_05"] }
env_logger = "0.10"
log = "0.4"
wgpu = "22.0"
cfg-if = "1"
pollster = "0.3"
bytemuck = { version = "1.16", features = [ "derive" ] }
anyhow = "1.0.86"
cgmath = "0.18.0"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]
 
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "22.0", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}
 


 
[profile.release]
opt-level = 'z'         # 최적의 크기 감소를 위한 최적화 (z는 크기 기준, s는 성능 기준)
lto = true              # 'thin'보다 더 높은 수준의 LTO (fat은 더 많은 크기 최적화 제공)
codegen-units = 1       # 코드 생성 단위를 1로 설정하여 최적화
panic = 'abort'         # 패닉 시 스택 추적을 제외하여 크기 감소
debug = false           # 디버그 심볼 제거
overflow-checks = false # 오버플로 체크 제거
strip = true